[FIX] Footer in some pages - covering buttons

--- a/indico/htdocs/css/Default.css
+++ b/indico/htdocs/css/Default.css
@@ -16,7 +16,7 @@ div.wrapper {
 }
 
 div.main {
-    padding-bottom: 40px;
+    padding-bottom: 60px;
 }
 
 /*
